Atualiza arquivos de estilo, script e HTML

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
                 </div>
                 <!--Inicio menu navegação-->
                 <nav>
-                    <ul id="MenuItens">
-                        <li <a href="" title="">Inicio</li>
-                        <li <a href="" title="">Produtos</li>
-                        <li <a href="" title="">Empresa</li>
-                        <li <a href="" title="">Contatos</li>
-                        <li <a href="" title="">Minha Conta</li>
+                    <ul id="MenuItenss">
+                        <li <a class="branco" href="" title="">Inicio</li>
+                        <li <a class="branco" href="" title="">Produtos</li>
+                        <li <a class="branco" href="" title="">Empresa</li>
+                        <li <a class="branco" href="" title="">Contatos</li>
+                        <li <a class="branco" href="" title="">Minha Conta</li>
                     </ul>
                 </nav>
                 <!--Fim menu navegação-->
 
-                <img src="asstes/img/carrinho.png" alt="" width="30px" height="30px">
+                <img class="carrinho" src="asstes/img/carrinho.png" alt="" width="40px" height="40px">
 
                 <img src="asstes/img/menu.png" alt="" class="menu-cel" onclick="menucel()">
 
