--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Virtual</title>
+    <link rel="stylesheet" href="produtos.html">
+    <link rel="stylesheet" href="empresa.html">
+    <link rel="stylesheet" href="contatos.html">
+    <link rel="stylesheet" href="minhaConta.html">
     <link rel="stylesheet" href="asstes/css/style.css">
 </head>
 <body>
@@ -15,16 +19,16 @@
             <!--Inicio navegação-->
             <div class="navbar">
                 <div class="logo">
-                    <img src="asstes/img/logo.png" alt="Empresa" width="125px">
+                    <img src="asstes/img/Preto e Rosa Moderno Comida  Bebida Logotipo.gif" alt="Empresa" class="logoSouza" width="130px">
                 </div>
                 <!--Inicio menu navegação-->
                 <nav>
                     <ul id="MenuItenss">
-                        <li <a class="branco" href="" title="">Inicio</li>
-                        <li <a class="branco" href="" title="">Produtos</li>
-                        <li <a class="branco" href="" title="">Empresa</li>
-                        <li <a class="branco" href="" title="">Contatos</li>
-                        <li <a class="branco" href="" title="">Minha Conta</li>
+                        <li class="branco"><a href="#">Inicio</a></li>
+                        <li class="branco"><a href="#produtos">Produtos</a></li>
+                        <li class="branco"><a href="empresa.html" target="_blank">Empresa</a></li>
+                        <li class="branco"><a href="#contatos">Contatos</a></li>
+                        <li class="branco"><a href="minhaConta.html" target="_blank">Minha conta</a></li>
                     </ul>
                 </nav>
                 <!--Fim menu navegação-->
@@ -39,9 +43,12 @@
             <!--Inicio texto banner-->
                 <div class="linha">
                     <div class="col-2">
-                        <h1>Siga <br> @tp.souza</h1>
+                        <h1>Siga</h1>
+                        <div class="insta">
+                            <span>@tp.souza</span>
+                          </div>
                         <p>Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza Siga @tp.souza</p>
-                       <br> <a href="" class="btn">Mais informações →</a>
+                       <br> <a href="#produtos" class="btn">Mais informações ⬇️</a>
                     </div>
                    <div class="col-2">
                         <img src="asstes/img/banner-1.png" alt="">
@@ -83,8 +90,18 @@
     <!--Fim categorias-->
 
     <!--inicio produtos em destaques-->
+    <section id="produtos">
     <div class="corpo-categorias">
         <h2 class="titulo">@tp.souza</h2>
+
+        <div class="search-container">
+            <input
+              type="text"
+              class="search-bar"
+              placeholder="Pesquise produtos..."
+            />
+            <button class="search-button">Pesquisar</button>
+          </div>
 
         <div class="linha">
 
@@ -262,6 +279,7 @@
             <!--fim item produto-->
         </div>
     </div>
+</section>
     <!--fim produtos em destaques-->
 
 <!--inicio ofertas-->
@@ -275,7 +293,7 @@
                 <p>Siga @tp.souza</p>
                 <h1>Siga @tp.souza</h1>
                 <small>Siga @tp.souza</small>
-                <br> <br> <a href="" class="btn">Comprar agora →</a>
+                <br> <br> <a href="#produtos" class="btn">Ver Produtos  ⬆️</a>
             </div>
         </div>
     </div>
@@ -373,6 +391,7 @@
     <!--Fim de marcas-->
 
     <!--Inicio de Rodape-->
+    <section id="contatos">
         <footer class="rodape">
             <div class="container">
                 <div class="linha">
@@ -397,11 +416,11 @@
                     </div>
                     <div class="rodape-col4">
                         <h3>Redes Sociais</h3>
-                        <ul>
-                            <li>Instagram</li>
-                            <li>GitHub</li>
-                            <li>Linkdin</li>
-                        </ul>
+                        <div class="contatoss">
+                            <a href="https://www.instagram.com/tp.souza/">Instagram</a>
+                            <a href="https://github.com/Souza012">GitHub</a>
+                            <a href="https://www.linkedin.com/in/guilherme-souza-130620306/">LinkeDin</a>
+                        </div>
                     </div>
                 </div>
                 <hr>
@@ -410,6 +429,7 @@
                 </p>
             </div>
         </footer>
+    </section>
     <!--Fim de Rodape-->
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
